--- a/css/ikigai.css
+++ b/css/ikigai.css
@@ -140,6 +140,7 @@ html {
 
 body, html {
     overflow: hidden;
+    height: 100%;
 }
 
 body {
@@ -177,8 +178,7 @@ p {
 .flex-container h2 {
     text-transform: capitalize;
     font-family: 'Proxima Nova Bl', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    color: #fff;
-    opacity: 70%;
+    color: #b9b7b7;
     font-size: 4rem;
 }
 
@@ -221,12 +221,13 @@ p {
     align-items: center;
     appearance: none;
     font-size: .86rem;
-    background-color: #42a5f5;
+    background: #202020;
     border-radius: 6px;
-    padding: 10px 14px;
+    padding: 0.7em 2.1em;
+    font-weight: bolder;
     box-shadow: rgba(45, 35, 66, .4) 0 2px 4px, rgba(45, 35, 66, .3) 0 7px 13px -3px, rgba(58, 65, 111, .5) 0 -3px 0 inset;
     box-sizing: border-box;
-    color: #fff;
+    color: #b9b7b7;
     display: inline-flex;
     justify-content: center;
     overflow: hidden;
